--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/marshall007/npm-rethinkdbdash#readme",
   "devDependencies": {
+    "@types/rethinkdb": "github:andrew-monroe/rethinkdb",
     "greenkeeper-postpublish": "^1.0.1",
     "rethinkdbdash": "^2.3.29",
     "ts-node": "^2.0.0",
@@ -36,7 +37,6 @@
   },
   "dependencies": {
     "@types/bluebird": "^3.4.1",
-    "@types/node": "^6.0.78",
-    "@types/rethinkdb": "github:types/npm-rethinkdb"
+    "@types/node": "^6.0.78"
   }
 }
